[package]
name = "testangel-http"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
dynamic-plugin = "0.7.0"
parking_lot = "0.12.4"
reqwest = { version = "0.12.23", features = ["blocking"] }
testangel-engine = { git = "https://github.com/AngelSuite/TestAngel", version = "1.0.0" }
